objects/Asset.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>External ID for external system and hierarchy structure</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <description>Parent ID for hierarchy structure.  This will be the External_ID__c for the PARENT asset.</description>
        <label>Parent ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_ID__c</fullName>
        <description>Root ID for hierarchy structure.  This will be the External_ID__c for the ROOT asset</description>
        <label>Root ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAssets</fullName>
        <filterScope>Everything</filterScope>
        <label>All Assets</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>